Alteração no .json e gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -271,4 +271,7 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/
 
+# Removendo appsettings.json
+*.json
+
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore
