--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-5KBAHAP;Initial Catalog=NcDonalds;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
