Implementação do Identity

--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -3,6 +3,12 @@
     "DefaultConnection": "Data Source=DESKTOP-5KBAHAP;Initial Catalog=NcDonalds;Integrated Security=True"
   },
 
+  "UserSettings": {
+    "UserName": "NcDonalds",
+    "UserEmail": "admin@NcDonalds.com",
+    "UserPassword": "NcDonalds@2020"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
