--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -3,6 +3,8 @@
     "DefaultConnection": "Data Source=DESKTOP-5KBAHAP;Initial Catalog=NcDonalds;Integrated Security=True"
   },
 
+  //testetettetetete
+
   "UserSettings": {
     "UserName": "NcDonalds",
     "UserEmail": "admin@NcDonalds.com",
