--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-DD2VTFV;Initial Catalog=NcDonalds;Integrated Security=True"
+    "DefaultConnection": "Data Source=WINAPPHRACC2QPA;Initial Catalog=NcDonalds;Integrated Security=True"
   },
 
   "UserSettings": {
