Ajuste nas asp-action e string de conexão

--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Data Source=LAPTOP-DQGJE2TH;Initial Catalog=NcDonalds;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-5KBAHAP;Initial Catalog=NcDonalds;Integrated Security=True"
 
   },
 
