ajustando tela de resumo

--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Data Source=DESKTOP-5KBAHAP;Initial Catalog=NcDonalds;Integrated Security=True"
+    "DefaultConnection": "Data Source=WINAPPHRACC2QPA;Initial Catalog=NcDonalds;Integrated Security=True"
 
   },
 
