--- a/NcDonalds/appsettings.json
+++ b/NcDonalds/appsettings.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "DefaultConnection": "Data Source=WINAPPHRACC2QPA;Initial Catalog=NcDonalds;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-DD2VTFV;Initial Catalog=NcDonalds;Integrated Security=True"
 
   },
   "Logging": {
